# sql-ssis-to-databricks-accelerator

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  mcpb.toml  pyproject.toml  pytest.ini  repo_structure.md  requirements.txt  run_analysis.py  run_conversion.py  run_impact_analysis.py  run_ssis_conversion.py  run_target_state_design.py  run_test_matrix.py  run_validation.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  unsupported_object_type.md
.github/workflows/: ci.yml  release.yml  validate-sample.yml
accelerator/: cli.py
accelerator/analyzers/: dependency_graph.py  impact_analysis.py  inventory_builder.py
accelerator/converters/: sql_converter.py  ssis_converter.py
accelerator/docs/: current_state_doc.py  target_state_design.py  test_matrix.py
accelerator/parsers/: sql_project_parser.py  ssis_parser.py
bundle/: databricks.yml
bundle/resources/: sql_warehouse.yml  wwi_daily_etl_main.job.yml
bundle/src/: pyproject.toml
bundle/src/tests/: test_common.py
bundle/src/wwi_accelerator/: __init__.py  common.py
conf/: dev.yml  prod.yml  secrets.md  test.yml
deploy/: deploy.sh  generate_deployment_bundle.py  promote.sh  rollback.md  run_tests.sh  sql_deploy.py  validate_deployment.py
docs/: DEPLOYMENT.md  SKILLS.md  USAGE.md
docs/example-run/: README.md  adversarial_review.md  failed_cases.json  recommended_backlog.md  remediation_backlog.csv  test_report_template.md  validation_results.json  validation_summary.md
docs/example-run/pipeline-converted/: conversion_decisions.md  conversion_manifest.json  databricks_job_bundle.yml  ssis_conversion_report.md  unsupported_ssis_features.md  workflow_spec.json
docs/example-run/pipeline-outputs/: coverage_gaps.md  current_state_documentation.md  current_state_summary.json  dependencies.json  dependency_graph.dot  dependency_graph.md  impact_analysis.md  inventory.json  (+11 more)
docs/runbook/: RUNBOOK.md
fixtures/ssis/: minimal_package.dtsx
golden_outputs/: geography_temporal_table.sql  simple_table_lift_and_shift.sql
mcp/: README.md  plugin.json  server.py
mcp/tools/: analyse_inventory.py  convert_sql.py  convert_ssis.py  generate_bundle.py  parse_source.py  run_validation.py
skills/: 00_overview.md  01_set_role_and_rules.md  02_runtime_input_interface.md  03_implement_parsers.md  04_implement_analyzers.md  05_convert_sql_objects.md  06_convert_ssis_packages.md  07_documentation_generators.md  08_deployment_generator.md  09_test_matrix_and_fixtures.md  10_automated_tests.md  11_end_to_end_validation.md  12_adversarial_review.md  13_github_push.md  14_architecture_override.md
tests/: conftest.py  test_architecture_recommendation.py  test_dependency_graph.py  test_deployment_bundle.py  test_mcp_server.py  test_mcp_tools.py  test_metadata_extraction.py  test_parsers.py  test_regression_edge_cases.py  test_sql_conversion.py  test_ssis_mapping.py
(+550 files in other folders)
