[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-ssis-to-databricks-accelerator"
version = "0.1.0"
description = "Analyses, documents, and converts SQL Server/Synapse + SSIS solutions into Databricks (Unity Catalog, Delta Lake, Workflows) assets."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "sql-ssis-to-databricks-accelerator contributors" },
]
keywords = ["databricks", "ssis", "sql-server", "migration", "lakehouse", "delta-lake", "unity-catalog"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Code Generators",
]

# The accelerator's analysis/conversion pipeline is pure standard library by
# design (xml.etree.ElementTree, re, json, csv, pathlib) — no parsing or
# templating dependencies are required to run it. This is deliberate: it
# keeps the accelerator easy to audit and run anywhere Python 3.10+ exists.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.10",
]
# Only needed if you uncomment the live-execution paths in deploy/sql_deploy.py
# and deploy/validate_deployment.py (everything else in this repo runs without it).
deploy = [
    "databricks-sql-connector>=3.0",
]
# Only needed to run mcp/server.py (the MCP server exposing accelerator tools
# to AI agents) — the accelerator pipeline itself never imports this.
mcp = [
    "mcp>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/<org>/sql-ssis-to-databricks-accelerator"
Issues = "https://github.com/<org>/sql-ssis-to-databricks-accelerator/issues"

[tool.setuptools.packages.find]
include = ["accelerator*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
# run_validation.py deliberately inserts the repo root onto sys.path before
# importing accelerator.* (it's a standalone script, not run as a package),
# so its local imports are intentionally not at the top of the file.
"run_validation.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
